# fastpat

./: .gitignore  LICENSE  README  README.md  abstract_ngram.py  analyze_comp.py  analyze_lags.py  analyze_pandas.py  analyze_patent.py  analyze_patents.py  analyze_transfer.py  analyze_within.py  commands.txt  compustat_assign_match.py  compustat_grant_match.py  compustat_match.py  compustat_merge.py  dump_assign_csv.py  dump_assign_npy.py  dump_comp_npy.py  dump_grants_csv.py  dump_grants_npy.py  dump_trans_npy.py  fetch_apply.py  fetch_assign.py  fetch_grant.py  fetch_grants.py  fetch_maint.py  fetch_tmapply.py  find_assign_dups.py  firm_assign.py  firm_cites.py  firm_cluster.py  firm_merge.py  firm_tools.py  fix_patent_tables.py  flag_assign_dups.py  gen_tables.py  hash_binning.py  load_data.py  (+48 more)
assign_files/: .gitignore  assign_files.txt  fetch_assignments.py
attic/: dump_assign_npy.py  dump_grants_npy.py  parse_nber_grants.py  patents_match_regress.py
fastpat/: __init__.py  cli.py
fastpat/firms/: cites.py
fastpat/meta/: apply_files.txt  grant_files.txt  (+2 more)
grant_files/: .gitignore  fetch_grants.py  fix_grants.py  fix_grants_gen2.py  fix_grants_gen3.py  grant_files.txt
meta/: PADX-File-Description-v2_Hague.doc  ST32-US-Grant-025xml.dtd  apply_files.txt  assign_files.txt  commands.txt  grant_files.txt  tmapply_files.txt  us-patent-grant-v42-2006-08-23.dtd
meta_data/: apply_files.txt  grant_files.txt
old_scripts/: analyze_comp.py  analyze_lags.py  analyze_pandas.py  patents_match_analyze.py
patents/: __init__.py
tools/: parse.py  standardize.py  tables.py
(+25 files in other folders)
