# pyproject.toml

[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'fastpat'
version = '0.9.2'
description = 'USPTO patent data fetcher and parser'
readme = { file = 'README.md' , content-type = 'text/markdown' }
authors = [{ name = 'Doug Hanley', email = 'thesecretaryofwar@gmail.com' }]
license = { text = 'MIT' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['patents', 'clustering', 'economics']
dependencies = ['fire', 'numpy', 'pandas', 'lxml', 'xxhash', 'editdistance', 'networkx', 'Cython']
requires-python = '>=3.7'

[project.scripts]
fastpat = 'fastpat:cli.main'

[project.urls]
Homepage = 'http://github.com/iamlemec/fastpat'

[tool.setuptools]
package-dir = { fastpat = 'fastpat' }
